# orangecar-wallpaper-scraper

./: .env.template  Dockerfile  README.md  crontab.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
src/: api_client.py  enums.py  main.py  scraper.py  settings.py  the_box_to_drop.py
src/tests/: test_api_client.py  test_main.py  test_the_box_to_drop.py
